Clickhander Added in RecyleView

--- a/app/src/main/res/layout/list_item_sleep_night.xml
+++ b/app/src/main/res/layout/list_item_sleep_night.xml
@@ -4,6 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <variable
+        name="clickListener"
+        type="com.example.android.trackmysleepquality.sleeptracker.SleepNightListener" />
 
         <variable
             name="sleep"
@@ -12,7 +15,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:onClick="@{()->clickListener.onClick(sleep)}">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/quality_image"
